--- a/futureofwork.html
+++ b/futureofwork.html
@@ -177,6 +177,12 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="openambiguity.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Open Ambiguity: Keynote, Open Source &amp; Feelings 2016</span>
+          </a>
+        </li>
+        <li>
           <a href="futureofwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
@@ -522,7 +528,13 @@
         <!-- <h1 class="title">Interviews with Fiverr.com Testimonial Actors</h1> -->
         <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163223022?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>       
+        </div>
+        <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
+        <br/></br/>
+        Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product. In the majority of cases, these are products they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
+        <br/></br/>
+        The actors we hired were not given a script. Instead, they were presented with a series of questions about jobs, the sharing economy, and the future of work. To our knowledge, the following responses reflect the personal views and experiences of these workers.
+        </p>       
     </div>
 
   
