--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="openambiguity.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Open Ambiguity: Keynote, Open Source &amp; Feelings 2016</span>
+          </a>
+        </li>
+        <li>
           <a href="futureofwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
@@ -515,35 +521,36 @@
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card3" class="card draggable center">
-    <em>Externalize Distrust</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/153587609?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
-  </div>
-
-  <div id="card4" class="card draggable center rituals">
+  <div id="card3" class="card draggable center rituals">
     <em>Rituals for Removing<br/>Creative Blocks</em><br/>
     <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
   </div>
 
-  <div id="card5" class="card draggable center">
+  <div id="card4" class="card draggable center">
     <em>Making Others</em><br/><br/><br/><br/>
     <div class="video-module">
     <iframe src="https://player.vimeo.com/video/161268973?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card6" class="card draggable center">
+  <div id="card5" class="card draggable center">
     <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card7" class="card draggable center">
+  <div id="card6" class="card draggable center">
     <img class="new" src="img/new.gif"/>
     <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, testimonials</small>
+  </div>
+
+  <div id="card7" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Commissioned Lecture</small>
   </div>
   <!-- END: CARDS ROW 1 -->
 
@@ -571,11 +578,15 @@
   <div id="card10" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+      <strong>11.2016</strong> <em>Anxious to Make</em>, <a href="http://www.b4bel4b.com/" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
+      <br/><br/>
+      <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia (forthcoming)
+      <br/><br/>
       <strong>05.2016</strong> <em>Making You</em>, <a href="https://www.facebook.com/events/1597218800596638/" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, werkärtz, Los Angeles, CA
       <br/><br/>
       <strong>04.2016</strong> <em>Can't Someone Else Do It?</em>,<br/><a href="http://www.ybca.org/introducing-our-creative-ecosystem" target="_blank">"Art &amp; Labor Think Tank: Field of Inquiry"</a>, Yerba Buena Center for the Arts, San Francisco, CA
       <br/><br/>
-      <strong>03.2016</strong> <a href="http://temporaryartreview.com/" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://theluminaryarts.com/exhibitions/document-v" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
+      <strong>03.2016</strong> <a href="temporaryartreview.html" target="_blank"><em>They Paid Me to Give You a Tour of the Internet</em></a>, <a href="http://theluminaryarts.com/exhibitions/document-v" target="_blank">"Document V"</a>, The Luminary, St. Louis, MO
       <br/><br/>
       <strong>02.2016</strong> <em>Making You</em>, <a href="http://emmedia.ca/?p=4451" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, EMMEDIA, Calgary, Canada
       <br/><br/>
