--- a/twins.html
+++ b/twins.html
@@ -177,6 +177,12 @@
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseCommissions">
         <li>
+          <a href="openambiguity.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Open Ambiguity: Keynote, Open Source &amp; Feelings 2016</span>
+          </a>
+        </li>
+        <li>
           <a href="futureofwork.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
             <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
