minor changes to osf and testimonials

--- a/futureofwork.html
+++ b/futureofwork.html
@@ -531,7 +531,7 @@
         </div>
         <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
         <br/></br/>
-        Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product. In the majority of cases, these are products they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
+        Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product or service. In the majority of cases, these are products or services they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
         <br/></br/>
         The actors we hired were not given a script. Instead, they were presented with a series of questions about jobs, the sharing economy, and the future of work. To our knowledge, the following responses reflect the personal views and experiences of these workers.
         </p>       
