updated news, added modal for TAR, added rhizome proposal

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
       <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
       <br/><hr>
-      <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
+      <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
   </div>        
@@ -221,7 +221,7 @@
         <li>
           <a href="twins.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
+            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
           </a>
         </li>
         <li>
@@ -528,16 +528,16 @@
   </div>
 
   <div id="card4" class="card draggable center">
-    <em>Making Others</em><br/><br/><br/><br/>
-    <div class="video-module">
-    <iframe src="https://player.vimeo.com/video/161268973?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/>
+    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
   <div id="card5" class="card draggable center">
-    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
+    <img class="new" src="img/new.gif"/>
+    <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
+    <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
+    <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
   </div>
 
   <div id="card6" class="card draggable center">
@@ -582,6 +582,8 @@
       <strong>11.2016</strong> <em>Anxious to Make</em>, <a href="http://www.b4bel4b.com/" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
       <br/><br/>
       <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia (forthcoming)
+      <br/><br/>
+      <strong>09.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, "The Institute for New Feeling / FELT BOOK" (screening), <a href="http://nyartbookfair.com/" target="_blank">NY Art Book Fair</a>, MoMA PS1, Long Island City, NY
       <br/><br/>
       <strong>05.2016</strong> <em>Making You</em>, <a href="https://www.facebook.com/events/1597218800596638/" target="_blank">"The Institute for New Feeling / FELT BOOK" (screening)</a>, werkärtz, Los Angeles, CA
       <br/><br/>
