--- a/projectgenerator.html
+++ b/projectgenerator.html
@@ -91,7 +91,7 @@
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
       <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
       <br/><hr>
-      <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://digikits.ch" target="_blank">http://digikits.ch</a> and <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com/</a>.</p>
+      <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
   </div>        
@@ -205,7 +205,7 @@
         <li>
           <a href="twins.html">
             <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance of Roles or Personas Outside of Comfort Zone</span>
+            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
           </a>
         </li>
         <li>
