updated cse meta and email link

--- a/sweepstakes.html
+++ b/sweepstakes.html
@@ -313,6 +313,12 @@
       </ul>
     </li>
     <li>
+      <a href="cse.html">
+        <span class="fa fa-globe dnl-link-icon"></span>
+        <span class="dnl-link-text">CSE</span>
+      </a>
+    </li>
+    <li>
       <a href="sweepstakes.html">
         <span class="fa fa-trophy dnl-link-icon"></span>
         <span class="dnl-link-text">Sweepstakes</span>
