--- a/cse.html
+++ b/cse.html
@@ -2,31 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Center for the Sharing Economy</title>
+    <title>Center for the Sharing Economy (CSE)</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content='The Center for the Sharing Economy (CSE)'>
-    <meta name='keywords' content=''>
+    <meta name='description' content='The Center for the Sharing Economy (CSE). Artist collective “Anxious to Make” is forming a new archive out of the physical ephemera that make up the so-called ‘sharing economy’: from employee manuals to Lyft moustaches to t-shirts, they are collecting them all!'>
+    <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, outsourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, gig economy, collaborative consumption, collaborative economy'>
     
     <!-- Open Graph data -->
-    <meta property="og:title" content="Anxious to Make" />
+    <meta property="og:title" content="Center for the Sharing Economy (CSE) " />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.anxioustomake.ga/" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/cse.html" />
     <meta property="og:image" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg" />
-    <meta property="og:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.' /> 
+    <meta property="og:description" content='Artist collective “Anxious to Make” is forming a new archive out of the physical ephemera that make up the so-called ‘sharing economy’: from employee manuals to Lyft moustaches to t-shirts, they are collecting them all!' /> 
     <meta property="og:site_name" content="Anxious to Make" />
     <meta property="fb:admins" content="753667636" />
 
     <!--Twitter Meta-->
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@Resonator11" />
-    <meta name="twitter:title" content="Anxious to Make">
-    <meta name="twitter:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.'>
+    <meta name="twitter:title" content="Center for the Sharing Economy (CSE) ">
+    <meta name="twitter:description" content='Artist collective “Anxious to Make” is forming a new archive out of the physical ephemera that make up the so-called ‘sharing economy’: from employee manuals to Lyft moustaches to t-shirts, they are collecting them all!'>
     <meta name="twitter:creator" content="@Resonator11">
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg">
+
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -60,63 +61,6 @@
     <script type="text/javascript" src="js/analytics.js"></script>
     
 
-<style>
-    .cse {
-      margin-top: 40px;
-    }
-    .cse h1{
-      padding-left: 15px;
-      padding-right: 15px;
-      font-size: 30px;
-      font-weight: 400;
-      background-color: #FF0179;
-      color: #fff;
-      display: inline-block;
-    }
-    .cse h2{
-      color: #FF0179;
-      font-size: 30px;
-      font-weight: 100;
-    }
-    .cse .pitch{
-      background-color: #FF0179;
-      color: #fff;
-      width: 100%;
-      padding: 40px 20px;
-      font-size: 1.5em;
-    }
-    .cse .intro{
-      background-color: #ffff00;
-      padding: 40px 20px;
-    }
-    .cse .contact{
-      padding: 40px 20px;
-      background-color: #fff;
-    }
-    .cse .donate{
-      background: url('img/cse-ad-5.png') repeat;
-    }
-    .cse .donate .row {
-      padding-top: 40px;
-    }
-    .cse .credit{
-      background-color: #ff0179;
-      color: #fff;
-    }
-    .cse .logo{
-      max-width: 20%;
-      display: block;
-      margin-left: 0;
-    }
-    @media screen and (max-width: 562px) {
-      .cse h1 {
-        font-size: 18px;
-      }
-      .cse .logo{
-        max-width: 50%;
-      }
-    }
-</style>
 </head>
 
 <body class="cse">
@@ -365,6 +309,12 @@
       </ul>
     </li>
     <li>
+      <a href="cse.html">
+        <span class="fa fa-globe dnl-link-icon"></span>
+        <span class="dnl-link-text">CSE</span>
+      </a>
+    </li>
+    <li>
       <a href="sweepstakes.html">
         <span class="fa fa-trophy dnl-link-icon"></span>
         <span class="dnl-link-text">Sweepstakes</span>
@@ -596,7 +546,7 @@
       <img class="img-responsive" src="img/cse-ad-2.png" alt="Get your certificate today!">
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <h2>Email us at <strong>anxioustomake@gmail.com</strong> if you possess such a material.<br/><br/>All qualified materials will become part of the archive and receive an embossed letter of certification.<br/><br/>Donations are accepted from the US only at this time. </h2>
+      <h2>Email us at <a href="mailto:anxioustomake@gmail.com?subject=Anxious to Donate"><strong>anxioustomake@gmail.com</strong></a> if you possess such a material.<br/><br/>All qualified materials will become part of the archive and receive an embossed letter of certification.<br/><br/>Donations are accepted from the US only at this time.</h2>
     </div>
   </div>
 </div>
@@ -611,7 +561,7 @@
 <div class="container-fluid credit">  
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <p>Anxious to Make’s work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), The Luminary (St. Louis), Werkartz (Los Angeles), and in online interventions on Temporary Art Review. More at www.anxioustomake.ga.</p>
+      <p>Anxious to Make’s work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), The Luminary (St. Louis), Werkartz (Los Angeles), and in online interventions on Temporary Art Review. More at <a href="/">www.anxioustomake.ga</a>.</p>
     </div>
   </div>
 </div>     
