changed meta for cse

--- a/brandgenerator.html
+++ b/brandgenerator.html
@@ -19,10 +19,10 @@
 
     <!--Twitter Meta-->
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
-    <meta name="twitter:site" content="@Resonator11" />
+    <meta name="twitter:site" content="@anxioustomake " />
     <meta name="twitter:title" content="Anxious to Make">
     <meta name="twitter:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.'>
-    <meta name="twitter:creator" content="@Resonator11">
+    <meta name="twitter:creator" content="@anxioustomake ">
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg">
 
     <!-- CSS -->
