--- a/cse.html
+++ b/cse.html
@@ -8,24 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content='The Center for the Sharing Economy (CSE). Artist collective “Anxious to Make” is forming a new archive out of the physical ephemera that make up the so-called ‘sharing economy’: from employee manuals to Lyft moustaches to t-shirts, they are collecting them all!'>
+    <meta name='description' content='The collective Anxious to Make is creating the Center for the Sharing Economy (CSE) as a research organization, hub for the gathering of sharing economy workers, artistic work, and a traveling center which will work to do the same. Its new archive seeks objects and ephemera for a sharing economy archive.'>
     <meta name='keywords' content='share, sharing economy, desiring-production, desiring-machine, commissions, authorship, identity, DIY culture, entrepreneurship, artist-as-entrepreneur, outsourcing, labor, Industry 4.0, economies of scale, artist-as-curator, artist-as-commissioner, on-demand economy, gig economy, collaborative consumption, collaborative economy'>
     
     <!-- Open Graph data -->
-    <meta property="og:title" content="Center for the Sharing Economy (CSE) " />
+    <meta property="og:title" content="Center for the Sharing Economy (CSE)" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://www.anxioustomake.ga/cse.html" />
     <meta property="og:image" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg" />
-    <meta property="og:description" content='Artist collective “Anxious to Make” is forming a new archive out of the physical ephemera that make up the so-called ‘sharing economy’: from employee manuals to Lyft moustaches to t-shirts, they are collecting them all!' /> 
+    <meta property="og:description" content='The collective Anxious to Make is creating the Center for the Sharing Economy (CSE) as a research organization, hub for the gathering of sharing economy workers, artistic work, and a traveling center which will work to do the same. Its new archive seeks objects and ephemera for a sharing economy archive.' /> 
     <meta property="og:site_name" content="Anxious to Make" />
     <meta property="fb:admins" content="753667636" />
 
     <!--Twitter Meta-->
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
-    <meta name="twitter:site" content="@Resonator11" />
-    <meta name="twitter:title" content="Center for the Sharing Economy (CSE) ">
-    <meta name="twitter:description" content='Artist collective “Anxious to Make” is forming a new archive out of the physical ephemera that make up the so-called ‘sharing economy’: from employee manuals to Lyft moustaches to t-shirts, they are collecting them all!'>
-    <meta name="twitter:creator" content="@Resonator11">
+    <meta name="twitter:site" content="@anxioustomake" />
+    <meta name="twitter:title" content="Center for the Sharing Economy (CSE)">
+    <meta name="twitter:description" content='The collective Anxious to Make is creating the Center for the Sharing Economy (CSE) as a research organization, hub for the gathering of sharing economy workers, artistic work, and a traveling center which will work to do the same. Its new archive seeks objects and ephemera for a sharing economy archive.'>
+    <meta name="twitter:creator" content="@anxioustomake">
     <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg">
 
 
