--- a/commissions.html
+++ b/commissions.html
@@ -21,7 +21,7 @@
 
     <!--Twitter Meta-->
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
-    <meta name="twitter:site" content="@anxioustomake " />
+    <meta name="twitter:site" content="@anxioustomake" />
     <meta name="twitter:title" content="Anxious to Make">
     <meta name="twitter:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.'>
     <meta name="twitter:creator" content="@anxioustomake ">
@@ -498,6 +498,10 @@
     <div class="container">
         <div class="row">
           <h1 class="title">Our Commissions</h1>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="openambiguity.html">
+            <img src="img/document.jpg" class="img-responsive" alt="Open Ambuguity"><span>Open Ambuguity</span></a>
+          </div>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="futureofwork.html">
             <img src="img/document.jpg" class="img-responsive" alt="Future of Work, Testimonials (Pt.1)"><span>The Future of Work, Testimonials (Pt.1)</span></a>
