--- a/malaonda.html
+++ b/malaonda.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Mala Onda</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Cache-control" content="public">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
@@ -14,7 +15,7 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Mala Onda" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.anxioustomake.ga/" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/malaonda.html" />
     <meta property="og:image" content="http://anxioustomake.ga/img/meta-dolphin.jpg" />
     <meta property="og:description" content="A Guide for Surviving the Next Five Years (or the next 5 minutes) of Accelerated Change in Post-Capitalism's Black Magic Vortex" /> 
     <meta property="og:site_name" content="Anxious to Make" />
