changed cta on mala onda

--- a/malaonda.html
+++ b/malaonda.html
@@ -550,7 +550,7 @@
         <h3>Who are you? How can we reach you?</h3>    
         <input name="name" type="text" class="feedback-input" placeholder="Name" required/>
         <input name="email" type="email" class="feedback-input" placeholder="Email" required/>
-        <input type="submit" value="PLEASE HELP!"/> 
+        <input type="submit" value="HELP IS ON THE WAY!"/> 
       </div>
     </form>
     <div style="display:none;" id="thankyou_message">
