--- a/dolphinaccelerator.html
+++ b/dolphinaccelerator.html
@@ -504,7 +504,7 @@
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186337332?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
-  <p><em>Dolphin Accelerator</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on on <a href="http://temporaryartreview.com/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
+  <p><em>Dolphin Accelerator</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on <a href="http://temporaryartreview.com/the-dual-power-of-arts-organizations/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
 </div>
 <!--END: MAIN CONTENT-->
 
