updated news, restructured nav, added future of work survey

--- a/temporaryartreview.html
+++ b/temporaryartreview.html
@@ -87,7 +87,7 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), and The Luminary (St. Louis, MO).</p>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
       <br/><hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
@@ -125,6 +125,106 @@
   <div class="clearfix"></div>
   <p class="dnl-nav-title">Work</p>
   <ul class="dnl-nav">
+    <li>
+      <a class="collapsed" data-toggle="collapse" href="#collapseCommissions" aria-expanded="false" aria-controls="collapseCommissions">
+        <span class="fa fa-file-o dnl-link-icon"></span>
+        <span class="dnl-link-text">Commissions</span>
+        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
+      </a>
+      <!-- Dropdown level one -->
+      <ul class="dnl-sub-one collapse" id="collapseCommissions">
+        <li>
+          <a href="malaonda.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Mala Onda</span>
+          </a>
+        </li>
+        <li>
+          <a href="dolphinaccelerator.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Dolphin Accelerator</span>
+          </a>
+        </li>
+        <li>
+          <a href="openambiguity.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Open Ambiguity</span>
+          </a>
+        </li>
+        <li>
+          <a href="futureofwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">The Future of Work</span>
+          </a>
+        </li>
+        <li>
+          <a href="temporaryartreview.html">
+            <span class="fa fa-chrome dnl-link-icon"></span>
+            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
+          </a>
+        </li>
+        <li>
+          <a href="makingyoumakingothers.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Making You, Making Others</span>
+          </a>
+        </li>
+        <li>
+          <a href="twins.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
+          </a>
+        </li>
+        <li>
+          <a href="performativeremoval.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performative Removal of Creative Block</span>
+          </a>
+        </li>
+        <li>
+          <a href="nevertalkaboutyourworkagain.html">
+            <span class="fa fa-picture-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Human Billboard to Talk About Your Work</span>
+          </a>
+        </li>
+        <li>
+          <a href="unfamiliarmaterials.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
+          </a>
+        </li>
+        <li>
+          <a href="forecasting.html">
+            <span class="fa fa-volume-down dnl-link-icon"></span>
+            <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
+          </a>
+        </li>
+        <li>
+          <a href="externalizedistrust.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performance to Externalize Distrust</span>
+          </a>
+        </li>
+        <li>
+          <a href="hypnosis.html">
+            <span class="fa fa-volume-down dnl-link-icon"></span>
+            <span class="dnl-link-text">Hypnosis to Engender Trust</span>
+          </a>
+        </li>
+        <li>
+          <a href="timemanagement.html">
+            <span class="fa fa-volume-down dnl-link-icon"></span>
+            <span class="dnl-link-text">Custom Audio Track for Motivation</span>
+          </a>
+        </li>
+        <li>
+          <a href="fucklabor.html">
+            <span class="fa fa-picture-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Fuck Labor. Write Scripts, Commission Animals</span>
+          </a>
+        </li>
+      </ul>
+    </li>
     <li>
       <a class="collapsed" data-toggle="collapse" href="#collapseStatistics" aria-expanded="false" aria-controls="collapseStatistics">
         <span class="fa fa-database dnl-link-icon"></span>
@@ -184,94 +284,6 @@
       </ul>
     </li>
     <li>
-      <a class="collapsed" data-toggle="collapse" href="#collapseCommissions" aria-expanded="false" aria-controls="collapseCommissions">
-        <span class="fa fa-file-o dnl-link-icon"></span>
-        <span class="dnl-link-text">Commissions</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseCommissions">
-        <li>
-          <a href="openambiguity.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Open Ambiguity: Keynote, Open Source &amp; Feelings 2016</span>
-          </a>
-        </li>
-        <li>
-          <a href="futureofwork.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
-          </a>
-        </li>
-        <li>
-          <a href="temporaryartreview.html">
-            <span class="fa fa-chrome dnl-link-icon"></span>
-            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
-          </a>
-        </li>
-        <li>
-          <a href="makingyoumakingothers.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Making You, Making Others</span>
-          </a>
-        </li>
-        <li>
-          <a href="twins.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
-          </a>
-        </li>
-        <li>
-          <a href="performativeremoval.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performative Removal of Creative Block</span>
-          </a>
-        </li>
-        <li>
-          <a href="nevertalkaboutyourworkagain.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Human Billboard to Talk About Your Work</span>
-          </a>
-        </li>
-        <li>
-          <a href="unfamiliarmaterials.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
-          </a>
-        </li>
-        <li>
-          <a href="forecasting.html">
-            <span class="fa fa-volume-down dnl-link-icon"></span>
-            <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
-          </a>
-        </li>
-        <li>
-          <a href="externalizedistrust.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance to Externalize Distrust</span>
-          </a>
-        </li>
-        <li>
-          <a href="hypnosis.html">
-            <span class="fa fa-volume-down dnl-link-icon"></span>
-            <span class="dnl-link-text">Hypnosis to Engender Trust</span>
-          </a>
-        </li>
-        <li>
-          <a href="timemanagement.html">
-            <span class="fa fa-volume-down dnl-link-icon"></span>
-            <span class="dnl-link-text">Custom Audio Track for Motivation</span>
-          </a>
-        </li>
-        <li>
-          <a href="fucklabor.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Fuck Labor. Write Scripts, Commission Animals</span>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>
     <a class="collapsed" data-toggle="collapse" href="#collapseDownloads" aria-expanded="false" aria-controls="collapseDownloads">
         <span class="fa fa-download dnl-link-icon"></span>
         <span class="dnl-link-text">Downloads</span>
@@ -302,7 +314,7 @@
     <li>
     <a class="collapsed" data-toggle="collapse" href="#collapseQuizzes" aria-expanded="false" aria-controls="collapseQuizzes">
         <span class="fa fa-question dnl-link-icon"></span>
-        <span class="dnl-link-text">Quizzes &amp; Surveys</span>
+        <span class="dnl-link-text">Quizzes</span>
         <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
       </a>
       <!-- Dropdown level one -->
@@ -313,10 +325,27 @@
             <span class="dnl-link-text">Would Money Be All I Really Need to Succeed?</span>
           </a>
         </li>
+      </ul>
+    </li>
+    <p class="dnl-nav-title">Contribute</p>
+    <li>
+    <a class="collapsed" data-toggle="collapse" href="#collapseSurveys" aria-expanded="false" aria-controls="collapseQuizzes">
+        <span class="fa fa-comment-o dnl-link-icon"></span>
+        <span class="dnl-link-text">Surveys</span>
+        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
+      </a>
+      <!-- Dropdown level one -->
+      <ul class="dnl-sub-one collapse" id="collapseSurveys">
         <li>
           <a href="makingyou.html">
-            <span class="fa fa-question dnl-link-icon"></span>
-            <span class="dnl-link-text">Important Research: <em>Making You</em> Survey</span>
+            <span class="fa fa-comment-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Important Research: <em>The Future of Work</em> Survey</span>
+          </a>
+        </li>
+        <li>
+          <a href="malaonda.html">
+            <span class="fa fa-comment-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Important Research: <em>A Guide for Surviving Post-Capitalism's Black Magic Vortex</em> Survey</span>
           </a>
         </li>
       </ul>
@@ -325,12 +354,6 @@
       <a href="cse.html">
         <span class="fa fa-globe dnl-link-icon"></span>
         <span class="dnl-link-text">CSE</span>
-      </a>
-    </li>
-    <li>
-      <a href="sweepstakes.html">
-        <span class="fa fa-trophy dnl-link-icon"></span>
-        <span class="dnl-link-text">Sweepstakes</span>
       </a>
     </li>
     <li>
