added survey for b4bel4b

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
       <br/><br/>
       <strong>11.2016</strong> <em>Side Gig</em>, <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
       <br/><br/>
-      <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://realfuturefair.com/" target="_blank">Real Future Fair</a>, Oakland, CA (forthcoming)
+      <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://realfuturefair.com/" target="_blank">Real Future Fair</a>, Oakland, CA
       <br/><br/>
       <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="https://www.soex.org/projects-exhibitions/me-and-you-and-other-thing" target="_blank">Me and You and This Other Thing</a>, Southern Exposure, San Francisco, CA
       <br/><br/>
