--- a/quizzes.html
+++ b/quizzes.html
@@ -525,13 +525,17 @@
     <div class="container">
         <div class="row">
           <h1 class="title">Our Quizzes and Surveys</h1>
-          <div class="col-xs-6 col-sm-4 col-sm-offset-2 document question">
+          <div class="col-xs-6 col-sm-4 document question">
             <a href="moneyquiz.html">
             <img src="img/quiz.jpg" class="img-responsive" alt="Would Money Be All I Really Need to Succeed?"><span>Would Money Be All I Really Need to Succeed?</span></a>
           </div>
           <div class="col-xs-6 col-sm-4 document question">
             <a href="makingyou.html">
             <img src="img/quiz.jpg" class="img-responsive" alt="Important Research: Making You"><span>Important Research: <em>Making You</em> Survey</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 document question">
+            <a href="malaonda.html">
+            <img src="img/quiz.jpg" class="img-responsive" alt="Important Research: A Guide for Surviving Post-Capitalism's Black Magic Vortex"><span>Important Research: <em>A Guide for Surviving Post-Capitalism's Black Magic Vortex</em> Survey</span></a>
           </div>
         </div>
     </div>
